# replay_trajectory_classification

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CITATION.cff  CLAUDE.md  LICENSE  README.md  environment.yml  postBuild  pyproject.toml  pytest.ini  setup.py
.github/: copilot-instructions.md
.github/workflows/: PR-test.yml  Pr-testyml  python-package-conda.yml
Processed-Data/: README.md
Raw-Data/: README.md
binder/: environment.yml
docs/: Makefile  api.rst  conf.py  index.md  installation.md  requirements-docs.txt  requirements.txt
docs/_static/: custom.css
docs/source/: api.rst  conf.py  index.md  index.rst  installation.md  tutorials.rst
notebooks/: Clusterless_Simulation.ipynb  Density_estimation.ipynb  Log.ipynb  Numba_GPU_KDE.ipynb  Numba_multiunit_likelihood.ipynb  Sorted_Spikes_Simulation.ipynb  Test_Inbound_Outbound_Directionality.ipynb  Test_Real_Data.ipynb  Two_Environments.ipynb  test_simulated_circular_track.ipynb
notebooks/tutorial/: 01-Introduction_and_Data_Format.ipynb  02-Decoding_with_Sorted_Spikes.ipynb  03-Decoding_with_Clusterless_Spikes.ipynb  04-Classifying_with_Sorted_Spikes.ipynb  05-Classifying_with_Clusterless_Spikes.ipynb
notebooks/work_in_progress/: 1D_respecting_connectivity.ipynb  Density_estimation.ipynb  EM.ipynb  Numba_GPU_KDE.ipynb  Numba_multiunit_likelihood.ipynb  Spatial_boundaries.ipynb  Test_2D_Diffusion.ipynb  Test_EM.ipynb  Test_EM2.ipynb  Test_Inbound_Outbound.ipynb  Test_Inbound_Outbound_Directionality.ipynb  Test_no_spike.ipynb  Test_normalizing_flows.ipynb  Two_Environments.ipynb  Two_Environments2.ipynb  Two_Environments2b.ipynb  Two_Environments2c.ipynb  Two_Environments3.ipynb  Viterbi.ipynb  multispike_bins.ipynb  simulate_deconvolved_calcium.ipynb  test_simulated_circular_track.ipynb
replay_trajectory_classification/: __init__.py  analysis.py  bins.py  calcium_likelihood.py  classifier.py  clusterless_simulation.py  continuous_state_transitions.py  core.py  decoder.py  discrete_state_transitions.py  environments.py  initial_conditions.py  load_data.py  load_example_data.py  misc.py  multiunit_likelihood.py  multiunit_likelihood_gpu.py  multiunit_likelihood_gpu_pinned_arrays.py  multiunit_likelihood_integer.py  multiunit_likelihood_integer_no_dask.py  multiunit_likelihood_integer_pass_position.py  multiunit_likelihood_numba.py  multiunit_likelihood_track_graph.py  observation_model.py  simulate.py  sorted_spikes_simulation.py  spiking_likelihood.py  standard_decoder.py  state_transition.py  visualization.py
replay_trajectory_classification/likelihoods/: __init__.py  calcium_likelihood.py  diffusion.py  multiunit_likelihood.py  multiunit_likelihood2.py  multiunit_likelihood_gpu.py  multiunit_likelihood_gpu2.py  multiunit_likelihood_gpu_pinned_arrays.py  multiunit_likelihood_gpu_shared.py  multiunit_likelihood_integer.py  multiunit_likelihood_integer_cupy.py  multiunit_likelihood_integer_gpu.py  multiunit_likelihood_integer_gpu2.py  multiunit_likelihood_integer_gpu3.py  multiunit_likelihood_integer_gpu_log.py  spiking_likelihood_glm.py  (+3 more)
scripts/: queue_cluster_jobs.py  run_by_epoch.py  test_gpu.py
(+22 files in other folders)
