[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replay_trajectory_classification"
description = "Classify replay trajectories."
authors = [
    {name = "Eric Denovellis", email = "eric.denovellis@ucsf.edu"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "statsmodels",
    "numba",
    "matplotlib",
    "pandas",
    "xarray",
    "scipy",
    "scikit-learn",
    "scikit-image",
    "regularized_glm",
    "dask",
    "distributed",
    "patsy",
    "networkx",
    "joblib",
    "track_linearization>=2.3.1",
    "tqdm",
    "seaborn",
]

[project.optional-dependencies]
test = ["pytest>=2.7.1"]
dev = [
    "pytest>=2.7.1",
    "ruff",
    "mypy",
    "jupyter",
    "jupyterlab",
]
docs = [
    "replay_trajectory_classification",
    "dask[distributed]",
    "numpydoc==1.1.0",
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-examples",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "ipython",
    "jupytext",
    "jupyter",
    "matplotlib",
    "numpy",
    "myst_parser",
    "myst_nb",
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/Eden-Kramer-Lab/replay_trajectory_classification"
Repository = "https://github.com/Eden-Kramer-Lab/replay_trajectory_classification"
Documentation = "https://replay-trajectory-classification.readthedocs.io/en/latest/"

[tool.setuptools]
packages = ["replay_trajectory_classification", "replay_trajectory_classification.likelihoods"]

[tool.setuptools.dynamic]
version = {attr = "replay_trajectory_classification.__version__"}

[tool.ruff]
# Same as Black.
line-length = 88

# Assume Python 3.10+
target-version = "py310"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10